<resources>
    <string name="app_name">Разговорник \"Русско-Английский\"</string>
    <string name="trip">Путешествия</string>
    <string name="transport">Транспорт</string>
    <string name="hotel">Отель</string>
    <string name="cafe">Кафе</string>
    <string name="excursion">Экскурсии</string>
    <string name="buy">Покупки</string>
    <string name="radio">Радио</string>
    <string name="bank">Банк</string>
    <string name="health">Здоровье</string>
    <string name="common">Другие</string>
    <string name="search_hint">Введите фразу или часть фразы на русском или английском языке</string>
    <string name="search_bar">Поиск в словаре</string>
    <string name="about_hint">О приложении</string>
    <string name="onClick">onClick</string>
    <string name="link">Ссылка в ВК</string>
    <string name="author">author</string>
    <string name="gmail">gmail</string>
    <string name="AdID">ca-app-pub-6978053805119593/3320737721</string>
    <string name="txt_ads_is_already_disabled">Уже отключено</string>
    <string name="msg_notification_Title">Перезапустить приложение</string>
    <string name="toggle">" "</string>
    <string name="feedback">Автор Luc1fer</string>
</resources>
