<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.luc1fer.phrasebook.about"
    android:background="@color/colorWhite"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPurple700"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorWhite" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:contentDescription="@string/author"
            app:srcCompat="@drawable/cop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/gmail"
                android:onClick="onLinkClick"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/gmailcopy" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/link"
                android:onClick="onImageButtonClick"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/vk" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/adLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/leaderboardBannerHeight"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-6978053805119593/7321619267" />

    </RelativeLayout>

</RelativeLayout>
